fix: alignments

--- a/style.scss
+++ b/style.scss
@@ -35,7 +35,7 @@ a {
 
 .title {
   position: relative;
-  margin: 0 0 25px 25px;
+  margin: 0  0 20px; 
 
   font-size: 18px;
   font-weight: 600;
@@ -164,6 +164,7 @@ a {
 .left-container {
   max-width: 40%;
 
+  padding-left: 15px;
   margin-right: 30px;
 }
 
@@ -239,12 +240,13 @@ a {
 
 .summary {
   margin-bottom: 55px;
+
+  .info {
+    padding-left: 15px;
+    margin: 0 20px 0 0;
+  }
 }
 
-.info {
-  padding: 0 30px 0 25px;
-  margin: 0;
-}
 
 .skills {
   margin-bottom: 55px;
@@ -257,7 +259,7 @@ a {
 .right-container {
   max-width: 60%;
 
-  padding: 25px;
+  padding: 30px;
   box-sizing: border-box;
 
   background-color: #F8F8F8;
@@ -268,15 +270,11 @@ a {
   margin-bottom: 55px;
 
   .subtitle {
-    padding-left: 25px;
     margin: 0 0 15px;
   }
 }
 
 .code-example {
-  margin: 15px;
-  padding-left: 25px;
-
   background-color: #d8e8ee;
 }
 
@@ -295,8 +293,7 @@ pre {
 }
 
 .info {
-  margin: 0 0 10px;
-  padding-left: 25px;
+  margin: 0 0 15px;
 }
 
 .experience-link {
@@ -312,8 +309,13 @@ pre {
   margin-bottom: 55px;
 }
 
+.education-list {
+  margin: 0;
+  padding-left: 30px;
+}
+
 .item {
-  margin: 15px;
+  margin-bottom: 15px;
 }
 
 .link {
@@ -324,17 +326,13 @@ pre {
   }
 }
 
-.lang-list {
-  padding-left: 25px;
-}
-
 .lang {
-  margin: 10px;
+  margin: 0 0 10px;
 }
 
 .lang-skill {
   padding-left: 35px;
-  margin: 9px 0;
+  margin: 0 0 15px;
 }
 
 .footer-wrapper {
